# vitacare

./: .gitignore  MASTER-SCOPE.md  README.md
.github/workflows/: ci.yml
agents/: .env.example  Dockerfile  README.md  pyproject.toml
agents/scripts/: smoke.py
agents/tests/: test_a2a_envelope.py  test_consent_grid.py  test_fhg_cosine.py
agents/vitacare/: __init__.py  adk_registry.py  config.py  llm.py  main.py
agents/vitacare/a2a/: __init__.py  consent.py  messages.py
agents/vitacare/fhg/: __init__.py  graph.py
agents/vitacare/mcp_clients/: __init__.py  calendar.py  clinic.py  insurer.py  lab.py  pharmacy.py  voice_telephony.py
agents/vitacare/personas/: __init__.py  registry.py
agents/vitacare/scenarios/: __init__.py  base.py  cascade.py  coordination.py  pregnancy.py
agents/vitacare/subagents/: __init__.py  base.py  chronicler.py  clinician.py  concierge.py  diplomat.py  sentinel.py  voice.py
docs/: architecture.md  cover.html  demo-script.md  devpost-submission.md  launch-post.md  video-guide.md
web/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/diagram/: page.tsx
web/app/pitch/: page.tsx
web/app/praxis/: page.tsx
web/components/: EventCard.tsx  FhgGraph.tsx  PersonaCard.tsx  PhoneCallModal.tsx  ScenarioRunner.tsx
