[project]
name = "vitacare-agents"
version = "0.1.0"
description = "VitaCare — multi-agent A2A care network backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tahsin Bayraktar", email = "info@gravitilabs.com" }]
license = { text = "Proprietary" }

dependencies = [
    "google-adk>=0.5.0",
    "google-genai>=0.8.0",
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-firestore>=2.18.0",
    "a2a-sdk>=0.2.0",
    "mcp>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "twilio>=9.3.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]

[project.scripts]
vitacare = "vitacare.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vitacare"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
